@@ -1,5 +1,14 @@
 2003-03-07  David Hyatt  <hyatt@apple.com>
 
+	Fix for time.com regression.  Don't allow text-decoration to
+	apply to anchor elements with no href.
+	
+        Reviewed by darin
+
+        * khtml/css/cssstyleselector.cpp:
+
+2003-03-07  David Hyatt  <hyatt@apple.com>
+
 	Whoops. Fix regression causedb y previous checkin.
 	
         Reviewed by darin
